--- a/requirements.txt
+++ b/requirements.txt
@@ -2,46 +2,59 @@
 # Python 3.10+
 
 # Core Framework
-#uipath-sdk>=1.0.0
-#uipath>=1.0.0
+uipath>=1.0.0
 
 # LangChain Ecosystem
-langchain>=0.1.0
-langchain-community>=0.0.20
+langchain>=1.0.3
+langchain-community>=0.4.1
 langchain-openai>=0.0.5
-langchain-core>=0.1.0
+langchain-core>=1.0.2
+langchain-classic>=1.0.0
+langchain-huggingface>=1.0.0
+langchain-openai>=1.0.1
+langchain-text-splitters>=1.0.0
+
 
 # PDF Processing
-pypdf>=3.17.0
-pypdf2>=3.0.1
+pypdf>=6.1.3
 
 # Vector Store & Embeddings
-faiss-cpu>=1.7.4
-sentence-transformers>=2.2.2
+faiss-cpu>=1.12.0
+sentence-transformers>=5.1.2
 
 # OpenAI
-openai>=1.10.0
-tiktoken>=0.5.2
+langchain-openai>=1.0.1
+openai>=2.6.1
+tiktoken>=0.12.0
 
 # API & Server
-fastapi>=0.109.0
-uvicorn>=0.27.0
-pydantic>=2.5.0
-pydantic-settings>=2.1.0
+fastapi>=0.120.2
+opentelemetry-instrumentation-fastapi>=0.59b0
+
+uvicorn>=0.38.0
+pydantic>=2.12.3
+pydantic_core>=2.41.4
+pydantic-function-models>=0.1.10
+pydantic-settings>=2.11.0
 
 # Utilities
-python-dotenv>=1.0.0
-requests>=2.31.0
-tqdm>=4.66.0
+python-dotenv>=1.2.1
+requests>=2.32.5
+requests-oauthlib>=2.0.0
+requests-toolbelt>=1.0.0
+
+
+tqdm>=4.67.1
 
 # Optional: Alternative Vector Stores
-chromadb>=0.4.22
+chromadb>=1.3.0
 
 # Development & Testing
-pytest>=7.4.0
-pytest-asyncio>=0.23.0
-black>=24.1.0
-flake8>=7.0.0
+pytest>=8.4.2
+pytest-asyncio>=1.2.0
+
+black>=25.9.0
+flake8>=7.3.0
 
 # Logging & Monitoring
-loguru>=0.7.2
+loguru>=0.7.3
